...
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Event Name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

...
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/eventDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="Describe the event..."
                    android:inputType="textMultiLine"
                    android:minLines="3" />
...
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/eventCategoryInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="e.g. Music"
                            android:inputType="text" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
...
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:src="@drawable/baseline_person_24"
                                app:tint="@color/primaryBlue" />

                            <EditText
                                android:id="@+id/winnersToDrawInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:background="@android:color/transparent"
                                android:fontFamily="@font/poppins_semibold"
                                android:hint="10"
...
                                android:layout_width="16dp"
                                android:layout_height="16dp"
                                android:src="@drawable/baseline_person_24"
                                app:tint="@color/primaryBlue" />

                            <EditText
                                android:id="@+id/waitlistCapInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:background="@android:color/transparent"
                                android:fontFamily="@font/poppins_semibold"
                                android:hint="No Limit"
...
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Require entrants to be nearby to join the lottery"
                        android:textColor="@color/headerSubtext"
                        android:textSize="11sp"
                        app:layout_constraintEnd_toStartOf="@+id/geoSwitch"
                        app:layout_constraintStart_toStartOf="@id/geoTitle"
                        app:layout_constraintTop_toBottomOf="@id/geoTitle" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/geoSwitch"
                        android:layout_width="wrap_content"
...
                        app:layout_constraintTop_toBottomOf="@id/addOrganizerTitle" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/publishButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:backgroundTint="@color/primaryBlue"
                android:fontFamily="@font/poppins_semibold"
...
